Fix SideMenu visibility

--- a/css/style.css
+++ b/css/style.css
@@ -964,6 +964,9 @@ a { text-decoration: none; }
     margin-top: -50px;
     font-size: 1.5em;
   }
+  #sideMenu {
+    display: none;
+  }
 }
 
 /*SECTIONS*/
